--- a/css/welcomestyle.css
+++ b/css/welcomestyle.css
@@ -148,4 +148,32 @@
     color: #5b5b5b8b;
     padding-bottom: 2rem;
 }
+.badgespace > img:first-child{
+    transform: scale(3,3);
+    margin-left: 9rem;
+
+}
+.badgespace > img:nth-child(2){
+    transform: scale(2,2);
+    margin-left: 20rem;
+
+}
+.badgespace > img:nth-child(3){
+    transform: scale(3.5,3.5);
+    margin-left: 20rem;
+    margin-top: .5rem;
+
+}
+.badgespace > img:nth-child(4){
+    transform: scale(2,2);
+    margin-left: 20rem;
+    margin-top: .5rem;
+
+}
+.badgespace{
+    display: flex;
+    width: 100%;
+    height: 6rem;
+    background-color: #acacac;
+}
 
